# Pasukim

./: .gitignore  CMakeLists.txt
include/: pasukim_config.h.in
scripts/: all.sh  clean.sh  config.sh  install.sh  run.sh
src/: pasukim.cpp
src/PasukFinder/: CMakeLists.txt  PasukFinder.cpp
src/PasukFinder/include/: PasukFinder.hpp
src/Tanakh/Bereshit/: Koren_translation.txt  Nikkudim
src/adder/: CMakeLists.txt  adder.cpp
src/adder/include/: adder.hpp
